Attempt to fix title cutoff on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,3 +35,7 @@ summary {
                0 0 5px rgba(181, 232, 83, 0.1),
                0 0 10px rgba(181, 232, 83, 0.1);
 }
+
+@media screen and (max-width: 850px) {
+	h1 { margin: 0; }
+}
